# ME_OFX

./: .gitignore  README.md
.github/workflows/: build-me_opendrt-all-platforms.yml  build-me_opendrt-linux.yml  build-me_opendrt-macos-arm64-safe.yml  build-me_opendrt-macos-both-linux-cuda.yml  build-me_opendrt-macos-linux-windows.yml  build-me_opendrt-macos-linux.yml  build-me_opendrt-macos.yml  build-me_opendrt-windows.yml
ME_OpenDRT/ME_OpenDRT.ofx.bundle/Contents/Win64/: ME_OpenDRT.ofx
ME_OpenDRT/source/: CMakeLists.txt  README.md  build_vc.bat  configure_vc.bat  sign_release.bat  sign_release.ps1
ME_OpenDRT/source/bundle/ME_OpenDRT.ofx.bundle/Contents/Win64/: ME_OpenDRT.ofx  ME_OpenDRT_CubeViewer.ilk
ME_OpenDRT/source/cmake/: CubeViewerInfo.plist.in  plugin_icon.rc.in  png_to_ico.ps1  viewer_icon.rc.in
ME_OpenDRT/source/docs/: ARCHITECTURE.md  LinuxCUDAValidationChecklist.md
ME_OpenDRT/source/installer/: ME_OpenDRT.iss
ME_OpenDRT/source/src/: OpenDRT.cpp  OpenDRTCPUCore.h  OpenDRTParams.h  OpenDRTPresets.h  OpenDRTProcessor.h
ME_OpenDRT/source/src/cuda/: OpenDRT.cu
ME_OpenDRT/source/src/metal/: OpenDRT.metal  OpenDRTMetal.h  OpenDRTMetal.mm
ME_OpenDRT/source/src/opencl/: GenerateOpenDRTCLSource.cmake  OpenDRT.cl
ME_OpenDRT/source/tools/cube_viewer_stub/: README.md  main.cpp
ME_OpenDRT/source/tools/cube_viewer_stub/cuda/: OpenDRTViewerCuda.cu  OpenDRTViewerCuda.h
ME_OpenDRT/source/tools/cube_viewer_stub/gl/: OpenDRTViewerOpenGLPresenter.cpp  OpenDRTViewerOpenGLPresenter.h
ME_OpenDRT/source/tools/cube_viewer_stub/metal/: OpenDRTViewerMetal.h  OpenDRTViewerMetal.mm
